--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     </style>
   </head>
   <body>
-  <script src="../dist/trianglify.min.js"></script>
+  <h1> HELLLOOOOOO </h1>
+  <script src="dist/trianglify.min.js"></script>
   <script>
   // set up the base pattern
   var pattern = Trianglify({
